[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[metadata]
name = pyasncio
version = 0.1
author = Mohammed Ameen
author_email = mo.ameen.eng@gmail.com
description = A simplified way to use python asyncio
long_description = file: README.rst

[options]
packages = find:
python_requires = >=3.11
